// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Checkbox /> checkbox only should render a icon only checkbox 1`] = `
<div>
  <div
    class="Viewweb__View-sc-1o0hmxm-0 eayzPs Flexweb__Flex-sc-1yhcoea-0 iyJkr"
  >
    <label
      class="Viewweb__View-sc-1o0hmxm-0 Labelweb__Label-rq06rg-0 fWvWEc Flexweb__Flex-sc-1yhcoea-0 kSCwNs"
      for="sample-checkbox"
    >
      <input
        class="Inputweb__Input-vlwi0r-0 hORnkh"
        data-testid="ds-checkbox"
        id="sample-checkbox"
        type="checkbox"
      />
      <div
        class="Viewweb__View-sc-1o0hmxm-0 Backdropweb__Backdrop-sc-26g88e-0 jeOdol Sizeweb__Size-sc-1e5yf1-0 esSlSU"
      >
        <svg
          aria-hidden="true"
          data-testid="ds-icon"
          fill="rgba(22, 47, 86, 0.38)"
          focusable="false"
          height="24"
          testID="checkbox-icon"
          viewBox="0 0 24 24"
          width="24"
        >
          <path
            clip-rule="evenodd"
            d="M16 7H8a1 1 0 00-1 1v8a1 1 0 001 1h8a1 1 0 001-1V8a1 1 0 00-1-1zM8 6a2 2 0 00-2 2v8a2 2 0 002 2h8a2 2 0 002-2V8a2 2 0 00-2-2H8z"
            fill-opacity="0.38"
            fill-rule="evenodd"
          />
        </svg>
      </div>
    </label>
  </div>
</div>
`;

exports[`<Checkbox /> checked should render checkbox checked(attr) as true if checked(prop) is true 1`] = `
<div>
  <div
    class="Viewweb__View-sc-1o0hmxm-0 eayzPs Flexweb__Flex-sc-1yhcoea-0 iyJkr"
  >
    <label
      class="Viewweb__View-sc-1o0hmxm-0 Labelweb__Label-rq06rg-0 fWvWEc Flexweb__Flex-sc-1yhcoea-0 kSCwNs"
      for="sample-checkbox"
    >
      <input
        checked=""
        class="Inputweb__Input-vlwi0r-0 fRyqUv"
        data-testid="ds-checkbox"
        id="sample-checkbox"
        type="checkbox"
      />
      <div
        class="Viewweb__View-sc-1o0hmxm-0 Backdropweb__Backdrop-sc-26g88e-0 jeOdol Sizeweb__Size-sc-1e5yf1-0 esSlSU"
      >
        <svg
          aria-hidden="true"
          data-testid="ds-icon"
          fill="rgba(43, 131, 234, 1.0 )"
          focusable="false"
          height="24"
          testID="checkbox-icon"
          viewBox="0 0 24 24"
          width="24"
        >
          <path
            clip-rule="evenodd"
            d="M6 8C6 6.89543 6.89543 6 8 6H16C17.1046 6 18 6.89543 18 8V16C18 17.1046 17.1046 18 16 18H8C6.89543 18 6 17.1046 6 16V8ZM14.6416 10.9038C14.8646 10.6876 14.8701 10.3314 14.6538 10.1084C14.4376 9.8854 14.0814 9.87992 13.8584 10.0962L11.1563 12.7165L10.1416 11.7325C9.91856 11.5163 9.56245 11.5218 9.34618 11.7448C9.12992 11.9678 9.1354 12.3239 9.35842 12.5402L10.7647 13.9038C10.9829 14.1154 11.3296 14.1154 11.5478 13.9038L14.6416 10.9038Z"
            fill-rule="evenodd"
          />
        </svg>
      </div>
    </label>
  </div>
</div>
`;

exports[`<Checkbox /> checked should render checkbox with checked(attr) as false if checked(prop) is false 1`] = `
<div>
  <div
    class="Viewweb__View-sc-1o0hmxm-0 eayzPs Flexweb__Flex-sc-1yhcoea-0 iyJkr"
  >
    <label
      class="Viewweb__View-sc-1o0hmxm-0 Labelweb__Label-rq06rg-0 fWvWEc Flexweb__Flex-sc-1yhcoea-0 kSCwNs"
      for="sample-checkbox"
    >
      <input
        class="Inputweb__Input-vlwi0r-0 hORnkh"
        data-testid="ds-checkbox"
        id="sample-checkbox"
        type="checkbox"
      />
      <div
        class="Viewweb__View-sc-1o0hmxm-0 Backdropweb__Backdrop-sc-26g88e-0 jeOdol Sizeweb__Size-sc-1e5yf1-0 esSlSU"
      >
        <svg
          aria-hidden="true"
          data-testid="ds-icon"
          fill="rgba(22, 47, 86, 0.38)"
          focusable="false"
          height="24"
          testID="checkbox-icon"
          viewBox="0 0 24 24"
          width="24"
        >
          <path
            clip-rule="evenodd"
            d="M16 7H8a1 1 0 00-1 1v8a1 1 0 001 1h8a1 1 0 001-1V8a1 1 0 00-1-1zM8 6a2 2 0 00-2 2v8a2 2 0 002 2h8a2 2 0 002-2V8a2 2 0 00-2-2H8z"
            fill-opacity="0.38"
            fill-rule="evenodd"
          />
        </svg>
      </div>
    </label>
  </div>
</div>
`;

exports[`<Checkbox /> defaultChecked should render checkbox checked(attr) as true if defaultChecked(prop) is true 1`] = `
<div>
  <div
    class="Viewweb__View-sc-1o0hmxm-0 eayzPs Flexweb__Flex-sc-1yhcoea-0 iyJkr"
  >
    <label
      class="Viewweb__View-sc-1o0hmxm-0 Labelweb__Label-rq06rg-0 fWvWEc Flexweb__Flex-sc-1yhcoea-0 kSCwNs"
      for="sample-checkbox"
    >
      <input
        checked=""
        class="Inputweb__Input-vlwi0r-0 fRyqUv"
        data-testid="ds-checkbox"
        id="sample-checkbox"
        type="checkbox"
      />
      <div
        class="Viewweb__View-sc-1o0hmxm-0 Backdropweb__Backdrop-sc-26g88e-0 jeOdol Sizeweb__Size-sc-1e5yf1-0 esSlSU"
      >
        <svg
          aria-hidden="true"
          data-testid="ds-icon"
          fill="rgba(43, 131, 234, 1.0 )"
          focusable="false"
          height="24"
          testID="checkbox-icon"
          viewBox="0 0 24 24"
          width="24"
        >
          <path
            clip-rule="evenodd"
            d="M16 7H8a1 1 0 00-1 1v8a1 1 0 001 1h8a1 1 0 001-1V8a1 1 0 00-1-1zM8 6a2 2 0 00-2 2v8a2 2 0 002 2h8a2 2 0 002-2V8a2 2 0 00-2-2H8z"
            fill-opacity="0.38"
            fill-rule="evenodd"
          />
        </svg>
      </div>
    </label>
  </div>
</div>
`;

exports[`<Checkbox /> defaultChecked should render checkbox with checked(attr) as false if defaultChecked(prop) is false 1`] = `
<div>
  <div
    class="Viewweb__View-sc-1o0hmxm-0 eayzPs Flexweb__Flex-sc-1yhcoea-0 iyJkr"
  >
    <label
      class="Viewweb__View-sc-1o0hmxm-0 Labelweb__Label-rq06rg-0 fWvWEc Flexweb__Flex-sc-1yhcoea-0 kSCwNs"
      for="sample-checkbox"
    >
      <input
        class="Inputweb__Input-vlwi0r-0 hORnkh"
        data-testid="ds-checkbox"
        id="sample-checkbox"
        type="checkbox"
      />
      <div
        class="Viewweb__View-sc-1o0hmxm-0 Backdropweb__Backdrop-sc-26g88e-0 jeOdol Sizeweb__Size-sc-1e5yf1-0 esSlSU"
      >
        <svg
          aria-hidden="true"
          data-testid="ds-icon"
          fill="rgba(22, 47, 86, 0.38)"
          focusable="false"
          height="24"
          testID="checkbox-icon"
          viewBox="0 0 24 24"
          width="24"
        >
          <path
            clip-rule="evenodd"
            d="M16 7H8a1 1 0 00-1 1v8a1 1 0 001 1h8a1 1 0 001-1V8a1 1 0 00-1-1zM8 6a2 2 0 00-2 2v8a2 2 0 002 2h8a2 2 0 002-2V8a2 2 0 00-2-2H8z"
            fill-opacity="0.38"
            fill-rule="evenodd"
          />
        </svg>
      </div>
    </label>
  </div>
</div>
`;

exports[`<Checkbox /> disabled should render a disabled checkbox if disabled is true 1`] = `
<div>
  <div
    class="Viewweb__View-sc-1o0hmxm-0 eayzPs Flexweb__Flex-sc-1yhcoea-0 iyJkr"
  >
    <label
      class="Viewweb__View-sc-1o0hmxm-0 Labelweb__Label-rq06rg-0 ffGjtK Flexweb__Flex-sc-1yhcoea-0 kSCwNs"
      disabled=""
      for="sample-checkbox"
    >
      <input
        class="Inputweb__Input-vlwi0r-0 dZONJI"
        data-testid="ds-checkbox"
        disabled=""
        id="sample-checkbox"
        type="checkbox"
      />
      <div
        class="Viewweb__View-sc-1o0hmxm-0 Backdropweb__Backdrop-sc-26g88e-0 jeOdol Sizeweb__Size-sc-1e5yf1-0 esSlSU"
      >
        <svg
          aria-hidden="true"
          data-testid="ds-icon"
          fill="rgba(22, 47, 86, 0.10)"
          focusable="false"
          height="24"
          testID="checkbox-icon"
          viewBox="0 0 24 24"
          width="24"
        >
          <path
            clip-rule="evenodd"
            d="M16 7H8a1 1 0 00-1 1v8a1 1 0 001 1h8a1 1 0 001-1V8a1 1 0 00-1-1zM8 6a2 2 0 00-2 2v8a2 2 0 002 2h8a2 2 0 002-2V8a2 2 0 00-2-2H8z"
            fill-opacity="0.38"
            fill-rule="evenodd"
          />
        </svg>
      </div>
    </label>
  </div>
</div>
`;

exports[`<Checkbox /> errorText should render checkbox with provided errorText 1`] = `
<div>
  <div
    class="Viewweb__View-sc-1o0hmxm-0 eayzPs Flexweb__Flex-sc-1yhcoea-0 iyJkr"
  >
    <label
      class="Viewweb__View-sc-1o0hmxm-0 Labelweb__Label-rq06rg-0 fWvWEc Flexweb__Flex-sc-1yhcoea-0 kSCwNs"
      for="sample-checkbox"
    >
      <input
        class="Inputweb__Input-vlwi0r-0 hORnkh"
        data-testid="ds-checkbox"
        id="sample-checkbox"
        type="checkbox"
      />
      <div
        class="Viewweb__View-sc-1o0hmxm-0 Backdropweb__Backdrop-sc-26g88e-0 jeOdol Sizeweb__Size-sc-1e5yf1-0 esSlSU"
      >
        <svg
          aria-hidden="true"
          data-testid="ds-icon"
          fill="rgba(22, 47, 86, 0.38)"
          focusable="false"
          height="24"
          testID="checkbox-icon"
          viewBox="0 0 24 24"
          width="24"
        >
          <path
            clip-rule="evenodd"
            d="M16 7H8a1 1 0 00-1 1v8a1 1 0 001 1h8a1 1 0 001-1V8a1 1 0 00-1-1zM8 6a2 2 0 00-2 2v8a2 2 0 002 2h8a2 2 0 002-2V8a2 2 0 00-2-2H8z"
            fill-opacity="0.38"
            fill-rule="evenodd"
          />
        </svg>
      </div>
      <div
        class="Textweb__Text-sc-1qrdpx3-0 fOMNhN Spaceweb__Space-sc-1abqisc-0 clARrY"
        color="shade.980"
        data-testid="ds-text"
      >
        Nice checkbox
      </div>
    </label>
    <div
      class="Textweb__Text-sc-1qrdpx3-0 kjotAU Spaceweb__Space-sc-1abqisc-0 chqsBq"
      color="negative.900"
      data-testid="ds-text"
    >
      This is some sample error text.
    </div>
  </div>
</div>
`;

exports[`<Checkbox /> focus with checked should render focus styles on checkbox when checked is false 1`] = `
<div>
  <div
    class="Viewweb__View-sc-1o0hmxm-0 eayzPs Flexweb__Flex-sc-1yhcoea-0 iyJkr"
  >
    <label
      class="Viewweb__View-sc-1o0hmxm-0 Labelweb__Label-rq06rg-0 fWvWEc Flexweb__Flex-sc-1yhcoea-0 kSCwNs"
      for="sample-checkbox"
    >
      <input
        class="Inputweb__Input-vlwi0r-0 hORnkh"
        data-testid="ds-checkbox"
        id="sample-checkbox"
        type="checkbox"
      />
      <div
        class="Viewweb__View-sc-1o0hmxm-0 Backdropweb__Backdrop-sc-26g88e-0 jeOdol Sizeweb__Size-sc-1e5yf1-0 esSlSU"
      >
        <svg
          aria-hidden="true"
          data-testid="ds-icon"
          fill="rgba(22, 47, 86, 0.38)"
          focusable="false"
          height="24"
          testID="checkbox-icon"
          viewBox="0 0 24 24"
          width="24"
        >
          <path
            clip-rule="evenodd"
            d="M16 7H8a1 1 0 00-1 1v8a1 1 0 001 1h8a1 1 0 001-1V8a1 1 0 00-1-1zM8 6a2 2 0 00-2 2v8a2 2 0 002 2h8a2 2 0 002-2V8a2 2 0 00-2-2H8z"
            fill-opacity="0.38"
            fill-rule="evenodd"
          />
        </svg>
      </div>
    </label>
  </div>
</div>
`;

exports[`<Checkbox /> focus with checked should render focus styles on checkbox when checked is true 1`] = `
<div>
  <div
    class="Viewweb__View-sc-1o0hmxm-0 eayzPs Flexweb__Flex-sc-1yhcoea-0 iyJkr"
  >
    <label
      class="Viewweb__View-sc-1o0hmxm-0 Labelweb__Label-rq06rg-0 fWvWEc Flexweb__Flex-sc-1yhcoea-0 kSCwNs"
      for="sample-checkbox"
    >
      <input
        checked=""
        class="Inputweb__Input-vlwi0r-0 fRyqUv"
        data-testid="ds-checkbox"
        id="sample-checkbox"
        type="checkbox"
      />
      <div
        class="Viewweb__View-sc-1o0hmxm-0 Backdropweb__Backdrop-sc-26g88e-0 jeOdol Sizeweb__Size-sc-1e5yf1-0 esSlSU"
      >
        <svg
          aria-hidden="true"
          data-testid="ds-icon"
          fill="rgba(43, 131, 234, 1.0 )"
          focusable="false"
          height="24"
          testID="checkbox-icon"
          viewBox="0 0 24 24"
          width="24"
        >
          <path
            clip-rule="evenodd"
            d="M6 8C6 6.89543 6.89543 6 8 6H16C17.1046 6 18 6.89543 18 8V16C18 17.1046 17.1046 18 16 18H8C6.89543 18 6 17.1046 6 16V8ZM14.6416 10.9038C14.8646 10.6876 14.8701 10.3314 14.6538 10.1084C14.4376 9.8854 14.0814 9.87992 13.8584 10.0962L11.1563 12.7165L10.1416 11.7325C9.91856 11.5163 9.56245 11.5218 9.34618 11.7448C9.12992 11.9678 9.1354 12.3239 9.35842 12.5402L10.7647 13.9038C10.9829 14.1154 11.3296 14.1154 11.5478 13.9038L14.6416 10.9038Z"
            fill-rule="evenodd"
          />
        </svg>
      </div>
    </label>
  </div>
</div>
`;

exports[`<Checkbox /> focus with defaultChecked should render focus styles on checkbox when defaultChecked is false 1`] = `
<div>
  <div
    class="Viewweb__View-sc-1o0hmxm-0 eayzPs Flexweb__Flex-sc-1yhcoea-0 iyJkr"
  >
    <label
      class="Viewweb__View-sc-1o0hmxm-0 Labelweb__Label-rq06rg-0 fWvWEc Flexweb__Flex-sc-1yhcoea-0 kSCwNs"
      for="sample-checkbox"
    >
      <input
        class="Inputweb__Input-vlwi0r-0 hORnkh"
        data-testid="ds-checkbox"
        id="sample-checkbox"
        type="checkbox"
      />
      <div
        class="Viewweb__View-sc-1o0hmxm-0 Backdropweb__Backdrop-sc-26g88e-0 jeOdol Sizeweb__Size-sc-1e5yf1-0 esSlSU"
      >
        <svg
          aria-hidden="true"
          data-testid="ds-icon"
          fill="rgba(22, 47, 86, 0.38)"
          focusable="false"
          height="24"
          testID="checkbox-icon"
          viewBox="0 0 24 24"
          width="24"
        >
          <path
            clip-rule="evenodd"
            d="M16 7H8a1 1 0 00-1 1v8a1 1 0 001 1h8a1 1 0 001-1V8a1 1 0 00-1-1zM8 6a2 2 0 00-2 2v8a2 2 0 002 2h8a2 2 0 002-2V8a2 2 0 00-2-2H8z"
            fill-opacity="0.38"
            fill-rule="evenodd"
          />
        </svg>
      </div>
    </label>
  </div>
</div>
`;

exports[`<Checkbox /> focus with defaultChecked should render focus styles on checkbox when defaultChecked is true 1`] = `
<div>
  <div
    class="Viewweb__View-sc-1o0hmxm-0 eayzPs Flexweb__Flex-sc-1yhcoea-0 iyJkr"
  >
    <label
      class="Viewweb__View-sc-1o0hmxm-0 Labelweb__Label-rq06rg-0 fWvWEc Flexweb__Flex-sc-1yhcoea-0 kSCwNs"
      for="sample-checkbox"
    >
      <input
        checked=""
        class="Inputweb__Input-vlwi0r-0 fRyqUv"
        data-testid="ds-checkbox"
        id="sample-checkbox"
        type="checkbox"
      />
      <div
        class="Viewweb__View-sc-1o0hmxm-0 Backdropweb__Backdrop-sc-26g88e-0 jeOdol Sizeweb__Size-sc-1e5yf1-0 esSlSU"
      >
        <svg
          aria-hidden="true"
          data-testid="ds-icon"
          fill="rgba(43, 131, 234, 1.0 )"
          focusable="false"
          height="24"
          testID="checkbox-icon"
          viewBox="0 0 24 24"
          width="24"
        >
          <path
            clip-rule="evenodd"
            d="M16 7H8a1 1 0 00-1 1v8a1 1 0 001 1h8a1 1 0 001-1V8a1 1 0 00-1-1zM8 6a2 2 0 00-2 2v8a2 2 0 002 2h8a2 2 0 002-2V8a2 2 0 00-2-2H8z"
            fill-opacity="0.38"
            fill-rule="evenodd"
          />
        </svg>
      </div>
    </label>
  </div>
</div>
`;

exports[`<Checkbox /> helpText should render checkbox with provided helpText 1`] = `
<div>
  <div
    class="Viewweb__View-sc-1o0hmxm-0 eayzPs Flexweb__Flex-sc-1yhcoea-0 iyJkr"
  >
    <label
      class="Viewweb__View-sc-1o0hmxm-0 Labelweb__Label-rq06rg-0 fWvWEc Flexweb__Flex-sc-1yhcoea-0 kSCwNs"
      for="sample-checkbox"
    >
      <input
        class="Inputweb__Input-vlwi0r-0 hORnkh"
        data-testid="ds-checkbox"
        id="sample-checkbox"
        type="checkbox"
      />
      <div
        class="Viewweb__View-sc-1o0hmxm-0 Backdropweb__Backdrop-sc-26g88e-0 jeOdol Sizeweb__Size-sc-1e5yf1-0 esSlSU"
      >
        <svg
          aria-hidden="true"
          data-testid="ds-icon"
          fill="rgba(22, 47, 86, 0.38)"
          focusable="false"
          height="24"
          testID="checkbox-icon"
          viewBox="0 0 24 24"
          width="24"
        >
          <path
            clip-rule="evenodd"
            d="M16 7H8a1 1 0 00-1 1v8a1 1 0 001 1h8a1 1 0 001-1V8a1 1 0 00-1-1zM8 6a2 2 0 00-2 2v8a2 2 0 002 2h8a2 2 0 002-2V8a2 2 0 00-2-2H8z"
            fill-opacity="0.38"
            fill-rule="evenodd"
          />
        </svg>
      </div>
      <div
        class="Textweb__Text-sc-1qrdpx3-0 fOMNhN Spaceweb__Space-sc-1abqisc-0 clARrY"
        color="shade.980"
        data-testid="ds-text"
      >
        Nice checkbox
      </div>
    </label>
    <div
      class="Textweb__Text-sc-1qrdpx3-0 dFPmAI Spaceweb__Space-sc-1abqisc-0 chqsBq"
      color="shade.950"
      data-testid="ds-text"
    >
      This is some sample help text.
    </div>
  </div>
</div>
`;

exports[`<Checkbox /> size should render a large checkbox 1`] = `
<div>
  <div
    class="Viewweb__View-sc-1o0hmxm-0 eayzPs Flexweb__Flex-sc-1yhcoea-0 iyJkr"
  >
    <label
      class="Viewweb__View-sc-1o0hmxm-0 Labelweb__Label-rq06rg-0 fWvWEc Flexweb__Flex-sc-1yhcoea-0 kSCwNs"
      for="sample-checkbox"
    >
      <input
        class="Inputweb__Input-vlwi0r-0 hORnkh"
        data-testid="ds-checkbox"
        id="sample-checkbox"
        type="checkbox"
      />
      <div
        class="Viewweb__View-sc-1o0hmxm-0 Backdropweb__Backdrop-sc-26g88e-0 ldFWsT Sizeweb__Size-sc-1e5yf1-0 gsATFY"
      >
        <svg
          aria-hidden="true"
          data-testid="ds-icon"
          fill="rgba(22, 47, 86, 0.38)"
          focusable="false"
          height="28"
          testID="checkbox-icon"
          viewBox="0 0 24 24"
          width="28"
        >
          <path
            clip-rule="evenodd"
            d="M16 7H8a1 1 0 00-1 1v8a1 1 0 001 1h8a1 1 0 001-1V8a1 1 0 00-1-1zM8 6a2 2 0 00-2 2v8a2 2 0 002 2h8a2 2 0 002-2V8a2 2 0 00-2-2H8z"
            fill-opacity="0.38"
            fill-rule="evenodd"
          />
        </svg>
      </div>
    </label>
  </div>
</div>
`;

exports[`<Checkbox /> size should render a medium(default) checkbox 1`] = `
<div>
  <div
    class="Viewweb__View-sc-1o0hmxm-0 eayzPs Flexweb__Flex-sc-1yhcoea-0 iyJkr"
  >
    <label
      class="Viewweb__View-sc-1o0hmxm-0 Labelweb__Label-rq06rg-0 fWvWEc Flexweb__Flex-sc-1yhcoea-0 kSCwNs"
      for="sample-checkbox"
    >
      <input
        class="Inputweb__Input-vlwi0r-0 hORnkh"
        data-testid="ds-checkbox"
        id="sample-checkbox"
        type="checkbox"
      />
      <div
        class="Viewweb__View-sc-1o0hmxm-0 Backdropweb__Backdrop-sc-26g88e-0 jeOdol Sizeweb__Size-sc-1e5yf1-0 esSlSU"
      >
        <svg
          aria-hidden="true"
          data-testid="ds-icon"
          fill="rgba(22, 47, 86, 0.38)"
          focusable="false"
          height="24"
          testID="checkbox-icon"
          viewBox="0 0 24 24"
          width="24"
        >
          <path
            clip-rule="evenodd"
            d="M16 7H8a1 1 0 00-1 1v8a1 1 0 001 1h8a1 1 0 001-1V8a1 1 0 00-1-1zM8 6a2 2 0 00-2 2v8a2 2 0 002 2h8a2 2 0 002-2V8a2 2 0 00-2-2H8z"
            fill-opacity="0.38"
            fill-rule="evenodd"
          />
        </svg>
      </div>
    </label>
  </div>
</div>
`;

exports[`<Checkbox /> size should render a small checkbox 1`] = `
<div>
  <div
    class="Viewweb__View-sc-1o0hmxm-0 eayzPs Flexweb__Flex-sc-1yhcoea-0 iyJkr"
  >
    <label
      class="Viewweb__View-sc-1o0hmxm-0 Labelweb__Label-rq06rg-0 fWvWEc Flexweb__Flex-sc-1yhcoea-0 kSCwNs"
      for="sample-checkbox"
    >
      <input
        class="Inputweb__Input-vlwi0r-0 hORnkh"
        data-testid="ds-checkbox"
        id="sample-checkbox"
        type="checkbox"
      />
      <div
        class="Viewweb__View-sc-1o0hmxm-0 Backdropweb__Backdrop-sc-26g88e-0 jeOdol Sizeweb__Size-sc-1e5yf1-0 esSlSU"
      >
        <svg
          aria-hidden="true"
          data-testid="ds-icon"
          fill="rgba(22, 47, 86, 0.38)"
          focusable="false"
          height="24"
          testID="checkbox-icon"
          viewBox="0 0 24 24"
          width="24"
        >
          <path
            clip-rule="evenodd"
            d="M16 7H8a1 1 0 00-1 1v8a1 1 0 001 1h8a1 1 0 001-1V8a1 1 0 00-1-1zM8 6a2 2 0 00-2 2v8a2 2 0 002 2h8a2 2 0 002-2V8a2 2 0 00-2-2H8z"
            fill-opacity="0.38"
            fill-rule="evenodd"
          />
        </svg>
      </div>
    </label>
  </div>
</div>
`;

exports[`<Checkbox /> title should render a checkbox with provided title 1`] = `
<div>
  <div
    class="Viewweb__View-sc-1o0hmxm-0 eayzPs Flexweb__Flex-sc-1yhcoea-0 iyJkr"
  >
    <label
      class="Viewweb__View-sc-1o0hmxm-0 Labelweb__Label-rq06rg-0 fWvWEc Flexweb__Flex-sc-1yhcoea-0 kSCwNs"
      for="sample-checkbox"
    >
      <input
        class="Inputweb__Input-vlwi0r-0 hORnkh"
        data-testid="ds-checkbox"
        id="sample-checkbox"
        type="checkbox"
      />
      <div
        class="Viewweb__View-sc-1o0hmxm-0 Backdropweb__Backdrop-sc-26g88e-0 jeOdol Sizeweb__Size-sc-1e5yf1-0 esSlSU"
      >
        <svg
          aria-hidden="true"
          data-testid="ds-icon"
          fill="rgba(22, 47, 86, 0.38)"
          focusable="false"
          height="24"
          testID="checkbox-icon"
          viewBox="0 0 24 24"
          width="24"
        >
          <path
            clip-rule="evenodd"
            d="M16 7H8a1 1 0 00-1 1v8a1 1 0 001 1h8a1 1 0 001-1V8a1 1 0 00-1-1zM8 6a2 2 0 00-2 2v8a2 2 0 002 2h8a2 2 0 002-2V8a2 2 0 00-2-2H8z"
            fill-opacity="0.38"
            fill-rule="evenodd"
          />
        </svg>
      </div>
      <div
        class="Textweb__Text-sc-1qrdpx3-0 fOMNhN Spaceweb__Space-sc-1abqisc-0 clARrY"
        color="shade.980"
        data-testid="ds-text"
      >
        Enable Beast Mode
      </div>
    </label>
  </div>
</div>
`;

exports[`<Checkbox /> variantColor should render a checkbox with default variantColor if variantColor not provided 1`] = `
<div>
  <div
    class="Viewweb__View-sc-1o0hmxm-0 eayzPs Flexweb__Flex-sc-1yhcoea-0 iyJkr"
  >
    <label
      class="Viewweb__View-sc-1o0hmxm-0 Labelweb__Label-rq06rg-0 fWvWEc Flexweb__Flex-sc-1yhcoea-0 kSCwNs"
      for="sample-checkbox"
    >
      <input
        checked=""
        class="Inputweb__Input-vlwi0r-0 fRyqUv"
        data-testid="ds-checkbox"
        id="sample-checkbox"
        type="checkbox"
      />
      <div
        class="Viewweb__View-sc-1o0hmxm-0 Backdropweb__Backdrop-sc-26g88e-0 jeOdol Sizeweb__Size-sc-1e5yf1-0 esSlSU"
      >
        <svg
          aria-hidden="true"
          data-testid="ds-icon"
          fill="rgba(43, 131, 234, 1.0 )"
          focusable="false"
          height="24"
          testID="checkbox-icon"
          viewBox="0 0 24 24"
          width="24"
        >
          <path
            clip-rule="evenodd"
            d="M16 7H8a1 1 0 00-1 1v8a1 1 0 001 1h8a1 1 0 001-1V8a1 1 0 00-1-1zM8 6a2 2 0 00-2 2v8a2 2 0 002 2h8a2 2 0 002-2V8a2 2 0 00-2-2H8z"
            fill-opacity="0.38"
            fill-rule="evenodd"
          />
        </svg>
      </div>
    </label>
  </div>
</div>
`;

exports[`<Checkbox /> variantColor should render a checkbox with provided variantColor 1`] = `
<div>
  <div
    class="Viewweb__View-sc-1o0hmxm-0 eayzPs Flexweb__Flex-sc-1yhcoea-0 iyJkr"
  >
    <label
      class="Viewweb__View-sc-1o0hmxm-0 Labelweb__Label-rq06rg-0 fWvWEc Flexweb__Flex-sc-1yhcoea-0 kSCwNs"
      for="sample-checkbox"
    >
      <input
        checked=""
        class="Inputweb__Input-vlwi0r-0 bRDYaI"
        data-testid="ds-checkbox"
        id="sample-checkbox"
        type="checkbox"
      />
      <div
        class="Viewweb__View-sc-1o0hmxm-0 Backdropweb__Backdrop-sc-26g88e-0 jeOdol Sizeweb__Size-sc-1e5yf1-0 esSlSU"
      >
        <svg
          aria-hidden="true"
          data-testid="ds-icon"
          fill="rgba(52, 74, 108, 1.0)"
          focusable="false"
          height="24"
          testID="checkbox-icon"
          viewBox="0 0 24 24"
          width="24"
        >
          <path
            clip-rule="evenodd"
            d="M16 7H8a1 1 0 00-1 1v8a1 1 0 001 1h8a1 1 0 001-1V8a1 1 0 00-1-1zM8 6a2 2 0 00-2 2v8a2 2 0 002 2h8a2 2 0 002-2V8a2 2 0 00-2-2H8z"
            fill-opacity="0.38"
            fill-rule="evenodd"
          />
        </svg>
      </div>
    </label>
  </div>
</div>
`;
